# kalmia-bms-fw

./: .cproject  .gitmodules  .project  CMakeLists.txt  Toolchain_linux_s32ds_arm.cmake
Project_Settings/Debugger/: kalmia_bms_fw_Debug.launch  kalmia_bms_fw_Debug_RAM.launch  kalmia_bms_fw_Release.launch
doc/sheets/: S32K118_IO_Signal_Description_Input_Multiplexing.xlsx  S32K1xx_DMA_Interrupt_mapping.xlsx  S32K1xx_Memory_Map.xlsx
src/: main.cpp
